--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About — Ometeotl Boilerplate</title>
+    <title>Ansiudad 2.0 — Acerca de</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
