--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header class="headerNav">
-        <a href="/">👉 Index</a>
-        <a href="./about.html">👉 About</a>
+        <a href="/">¿Qué es Ansiudad?</a>
+        <a href="./about.html">¿Cómo lo diseñanos?</a>
+        <a href="./about.html">¿Dónde se ha jugado?</a>
+        <a href="./about.html">¿De qué se trata?</a>
+        <a href="./juego.html">👉 ¿Quieres jugar?</a>
     </header>
 
     <main data-taxi>
