--- a/src/juego.html
+++ b/src/juego.html
@@ -137,7 +137,7 @@
                     <div class="text-globe" id="text1">
                         <h2>¡Bienvenidxs, ansiudadanxs habitantes de Ansiudad!</h1>
                         <p>Ansiudad es una herramienta educativa creada para fomentar conversaciones en torno al diseño social a través del juego.</p>
-                        <button class="regular-btn">Continuar ></button>
+                        <button class="regular-btn" id="real">Continuar ></button>
                     </div>
                 </div>
             </aside>
@@ -146,6 +146,6 @@
     </main>
 
     <canvas class="webgl"></canvas>
-    <script type="module" src="./script.js"></script>
+    <script async type="module" src="./script.js"></script>
 </body>
 </html>
