Python / Llama quick setup inside Juego.html

--- a/src/juego.html
+++ b/src/juego.html
@@ -137,7 +137,10 @@
                     <div class="text-globe" id="text1">
                         <h2>¡Bienvenidxs, ansiudadanxs habitantes de Ansiudad!</h1>
                         <p>Ansiudad es una herramienta educativa creada para fomentar conversaciones en torno al diseño social a través del juego.</p>
-                        <button class="regular-btn" id="real">Continuar ></button>
+
+                        <input type="text" class="inputField">
+                        <textarea name="" id="" class="textBox"></textarea>
+                        <button class="regular-btn submitBtn" id="real">Continuar ></button>
                     </div>
                 </div>
             </aside>
