App state manager setup, still wip

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,22 @@
         <article data-taxi-view id="homeContainer" class="pageContainer">
             <h1>This is index.html</h1>
         </article>
+
+        <aside id="llama-helper">
+            <div class="left-wrapper">
+                <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+            </div>
+
+            <div class="right-wrapper">
+                <div class="text-globe" id="text1">
+                    <h2>Steps Helper.</h1>
+                    <p>Current step:</p>
+                    <h3 id="stepsVisualizer">0</h3>
+
+                    <button class="regular-btn submitBtn" id="nextStepHelper">Siguiente paso ></button>
+                </div>
+            </div>
+        </aside>
     </main>
 
     <canvas class="webgl"></canvas>
