Transition between 3d scenes by moving camera, transition triggered by HTML button helper

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <article data-taxi-view id="homeContainer" class="pageContainer">
             <h1>This is index.html</h1>
 
-            <aside id="llama-helper">
+            <!-- <aside id="llama-helper">
                 <div class="left-wrapper">
                     <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
                 </div>
@@ -33,7 +33,7 @@
                         <button class="regular-btn submitBtn" id="nextStepHelper">Siguiente paso ></button>
                     </div>
                 </div>
-            </aside>
+            </aside> -->
         </article>
     </main>
 
