--- a/src/juego.html
+++ b/src/juego.html
@@ -125,10 +125,18 @@
                         <button class="regular-btn">Siguiente ></button>
                     </div>
                 </div>
+
+                <div class="slideContainer" id="slide4"></div>
+                <div class="slideContainer" id="slide5"></div>
+                <div class="slideContainer" id="slide6"></div>
+                <div class="slideContainer" id="slide7"></div>
+                <div class="slideContainer" id="slide8"></div>
+                <div class="slideContainer" id="slide9"></div>
+                <div class="slideContainer" id="slide10"></div>
             </div>
 
 
-            <aside id="llama-helper">
+            <!-- <aside id="llama-helper">
                 <div class="left-wrapper">
                     <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
                 </div>
@@ -141,6 +149,22 @@
                         <input type="text" class="inputField">
                         <textarea name="" id="" class="textBox"></textarea>
                         <button class="regular-btn submitBtn" id="real">Continuar ></button>
+                    </div>
+                </div>
+            </aside> -->
+
+            <aside id="llama-helper">
+                <div class="left-wrapper">
+                    <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                </div>
+    
+                <div class="right-wrapper">
+                    <div class="text-globe" id="text1">
+                        <h2>Steps Helper.</h1>
+                        <p>Current step:</p>
+                        <h3 id="stepsVisualizer">0</h3>
+    
+                        <button class="regular-btn submitBtn" id="nextStepHelper">Siguiente paso ></button>
                     </div>
                 </div>
             </aside>
