Layout and basic styles for game introduction styles (the HTML shown during PortalScene before TunnelScene

--- a/src/juego.html
+++ b/src/juego.html
@@ -126,8 +126,43 @@
                     </div>
                 </div>
 
-                <div class="slideContainer" id="slide4"></div>
-                <div class="slideContainer" id="slide5"></div>
+                <div class="slideContainer" id="slide4">
+                    <aside class="llama-instructions">
+                        <div class="portrait-wrapper">
+                            <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                        </div>
+
+                        <div class="text-wrapper">
+                            <h2>¡Hola!</h2>
+                            <h3>Soy Pacha Llama, y seré tu acompañante a lo largo de todo el juego.</h3>
+
+                            <p>He vivido en las montañas que rodean esta ciudad desde tiempos inmemoriales... de hecho, cuando yo llegué, ¡Ansiudad ni siquiera existía!</p>
+                            <p>Hoy, necesito tu ayuda. En los últimos años, he sido testigo del daño que las actividades humanas han causado en nuestro ecosistema, afectando no solo a una gran diversidad de personas, sino también a todo el entorno natural.</p>
+
+                            <button class="regular-btn">Continuar ></button>
+                        </div>
+                    </aside>
+                </div>
+
+                <div class="slideContainer" id="slide5">
+                    <aside class="llama-instructions">
+                        <div class="portrait-wrapper">
+                            <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                        </div>
+
+                        <div class="text-wrapper">
+                            <h3>Mi mente funciona como un oráculo: puedo ver futuros posibles...</h3>
+
+                            <p>Y lo que he visto es realmente aterrador.</p>
+                            <p>Es momento de que, como ansiudadanxs, tomemos acción para crear futuros más sostenibles y equitativos.</p>
+                            <p>Recuerda que deberás hacer equipo con tus compañerxs. No es una competencia individual; se trata de unir fuerzas para construir una mejor ciudad.</p>
+
+                            <h3>¿Me ayudas?</h3>
+
+                            <button class="regular-btn">Vamos a jugar! ></button>
+                        </div>
+                    </aside>
+                </div>
                 <div class="slideContainer" id="slide6"></div>
                 <div class="slideContainer" id="slide7"></div>
                 <div class="slideContainer" id="slide8"></div>
