wip UIManager to switch between HTML 'slides'. Extra css stylesheet for juego.html

--- a/src/juego.html
+++ b/src/juego.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juega — Ansiudad 2.0</title>
+    <link rel="stylesheet" href="./juego.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -195,7 +196,7 @@
     
                 <div class="right-wrapper">
                     <div class="text-globe" id="text1">
-                        <h2>Steps Helper.</h1>
+                        <h2>Steps Nav Helper.</h1>
                         <p>Current step:</p>
                         <h3 id="stepsVisualizer">0</h3>
     
