Removed steps helper and replaced with proper buttons inside UI. Complete flow working

--- a/src/juego.html
+++ b/src/juego.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
 
-                        <button class="regular-btn">Siguiente ></button>
+                        <button class="regular-btn goToNextStepBtn">Siguiente ></button>
                     </div>
                 </div>
                 
@@ -123,7 +123,7 @@
                             </div>
                         </div>
 
-                        <button class="regular-btn">Siguiente ></button>
+                        <button class="regular-btn goToNextStepBtn">Siguiente ></button>
                     </div>
                 </div>
 
@@ -140,7 +140,7 @@
                             <p>He vivido en las montañas que rodean esta ciudad desde tiempos inmemoriales... de hecho, cuando yo llegué, ¡Ansiudad ni siquiera existía!</p>
                             <p>Hoy, necesito tu ayuda. En los últimos años, he sido testigo del daño que las actividades humanas han causado en nuestro ecosistema, afectando no solo a una gran diversidad de personas, sino también a todo el entorno natural.</p>
 
-                            <button class="regular-btn">Continuar ></button>
+                            <button class="regular-btn goToNextStepBtn">Continuar ></button>
                         </div>
                     </aside>
                 </div>
@@ -160,7 +160,7 @@
 
                             <h3>¿Me ayudas?</h3>
 
-                            <button class="regular-btn">Vamos a jugar! ></button>
+                            <button class="regular-btn goToNextStepBtn">Vamos a jugar! ></button>
                         </div>
                     </aside>
                 </div>
@@ -230,7 +230,7 @@
                             </div>
                         </div>
 
-                        <button class="regular-btn">Listo, crea el incidente para jugar!</button>
+                        <button class="regular-btn goToNextStepBtn">Listo, crea el incidente para jugar!</button>
                     </div>
                 </div>
 
@@ -289,7 +289,7 @@
             </div>
 
 
-            <!-- <aside id="llama-helper">
+            <aside id="llama-helper">
                 <div class="left-wrapper">
                     <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
                 </div>
@@ -299,14 +299,13 @@
                         <h2>¡Bienvenidxs, ansiudadanxs habitantes de Ansiudad!</h1>
                         <p>Ansiudad es una herramienta educativa creada para fomentar conversaciones en torno al diseño social a través del juego.</p>
 
-                        <input type="text" class="inputField">
-                        <textarea name="" id="" class="textBox"></textarea>
-                        <button class="regular-btn submitBtn" id="real">Continuar ></button>
+                        <button class="regular-btn submitBtn" id="firstStepBtn">Continuar ></button>
                     </div>
                 </div>
-            </aside> -->
+            </aside>
 
-            <aside id="llama-helper">
+            <!-- HELPER for debugging steps -->
+            <!-- <aside id="llama-helper">
                 <div class="left-wrapper">
                     <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
                 </div>
@@ -320,7 +319,7 @@
                         <button class="regular-btn submitBtn" id="nextStepHelper">Siguiente paso ></button>
                     </div>
                 </div>
-            </aside>
+            </aside> -->
         </article>
 
     </main>
