Añadidos botones finales para volver al inicio y para ir directo a la vista de Llama para generar otro incidente

--- a/src/juego.html
+++ b/src/juego.html
@@ -262,6 +262,11 @@
 
                                 <p>Gracias por tu paciencia; ir al plano místico es toda una aventura. Esto es lo que veo en nuestro futuro:</p>
                                 <p>¡Ahora sí, todo listo para jugar!</p>
+
+                                <div class="buttons-wrapper">
+                                    <button class="regular-btn goToNextStepBtn">Volver al inicio</button>
+                                    <button class="regular-btn goToLlamaGeneration">Generar otro incidente ></button>
+                                </div>
                             </div>
                         </aside>
 
