replaced remaining 'lorem ipsums' inside cards

--- a/src/juego.html
+++ b/src/juego.html
@@ -39,32 +39,32 @@
 
                         <div class="cards-container">
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Pensamiento crítico y resolución de problemas:</h4>
+                                <p>Analizarán situaciones complejas, identificarán problemas y generarán soluciones creativas y sostenibles.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Colaboración:</h4>
+                                <p>Aprenderán a trabajar en conjunto, compartiendo ideas y valorando la diversidad de perspectivas y opiniones.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Empatía:</h4>
+                                <p>El juego promueve la empatía, al colocar a lxs estudiantes en distintos roles con prioridades, intereses y preocupaciones específicas.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Pensamiento creativo y codiseño:</h4>
+                                <p>Desarrollarán habilidades para idear posibles formas participativas de afrontar desafíos socioambientales complejos.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
@@ -91,32 +91,36 @@
 
                         <div class="cards-container">
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Te recomiendo:</h4>
+                                <p>Jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas, permitiendo entre 12 y 50 jugadorexs en total.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Para facilitar la colaboración:</h4>
+                                <p>Para facilitar la colaboración y el intercambio de ideas, cada equipo deberá ubicarse en una mesa.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Edades:</h4>
+                                <p>Ansiudad está pensado para estudiantes de 12 años en adelante y puede adaptarse a grupos de diversas edades.</p>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Card title</h4>
-                                <p>Card body. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis minus cumque repellendus ut, eligendi rerum, officia architecto cum libero suscipit vero excepturi iste ducimus possimus, quos beatae sapiente dolores quae.</p>
+                                <h4>Qué necesitas:</h4>
+                                <ul>
+                                    <li>Hojas blancas</li>
+                                    <li>Plumones</li>
+                                    <li>Pantalla o proyector</li>
+                                </ul>
                                 <div class="card-footer">
                                     <img src="" alt="A!">
                                 </div>
