Added svg logos to Juego landing and cards footer

--- a/src/juego.html
+++ b/src/juego.html
@@ -20,7 +20,8 @@
         <article data-taxi-view id="juegoContainer" class="pageContainer">
             <div class="allSlidesContainer">
                 <div class="slideContainer" id="slide0">
-                    <h1>ANSIUDAD</h1>
+                    <h1 style="display: none;">ANSIUDAD</h1>
+                    <img src="brand/logo-long.svg" alt="Ansiudad logo">
                 </div>
                 
                 <div class="slideContainer" id="slide1">
@@ -42,7 +43,7 @@
                                 <h4>Pensamiento crítico y resolución de problemas:</h4>
                                 <p>Analizarán situaciones complejas, identificarán problemas y generarán soluciones creativas y sostenibles.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -50,7 +51,7 @@
                                 <h4>Colaboración:</h4>
                                 <p>Aprenderán a trabajar en conjunto, compartiendo ideas y valorando la diversidad de perspectivas y opiniones.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -58,7 +59,7 @@
                                 <h4>Empatía:</h4>
                                 <p>El juego promueve la empatía, al colocar a lxs estudiantes en distintos roles con prioridades, intereses y preocupaciones específicas.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -66,7 +67,7 @@
                                 <h4>Pensamiento creativo y codiseño:</h4>
                                 <p>Desarrollarán habilidades para idear posibles formas participativas de afrontar desafíos socioambientales complejos.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                         </div>
@@ -94,7 +95,7 @@
                                 <h4>Te recomiendo:</h4>
                                 <p>Jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas, permitiendo entre 12 y 50 jugadorexs en total.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -102,7 +103,7 @@
                                 <h4>Para facilitar la colaboración:</h4>
                                 <p>Para facilitar la colaboración y el intercambio de ideas, cada equipo deberá ubicarse en una mesa.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -110,7 +111,7 @@
                                 <h4>Edades:</h4>
                                 <p>Ansiudad está pensado para estudiantes de 12 años en adelante y puede adaptarse a grupos de diversas edades.</p>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -122,7 +123,7 @@
                                     <li>Pantalla o proyector</li>
                                 </ul>
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                         </div>
@@ -198,7 +199,7 @@
                                 </div>
 
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -214,7 +215,7 @@
                                 </div>
 
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
@@ -229,7 +230,7 @@
                                 </div>
 
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                         </div>
@@ -280,7 +281,7 @@
                                 <div id="llama-incidente" class="llama-response">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellendus nisi, dolore earum exercitationem a, nemo vero, maxime veniam libero at beatae vel est perspiciatis nihil laboriosam incidunt sequi adipisci?</div>
 
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                             
@@ -289,7 +290,7 @@
                                 <div id="llama-roles" class="llama-response">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellendus nisi, dolore earum exercitationem a, nemo vero, maxime veniam libero at beatae vel est perspiciatis nihil laboriosam incidunt sequi adipisci?</div>
 
                                 <div class="card-footer">
-                                    <img src="" alt="A!">
+                                    <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                         </div>
