Replaced avatar placeholder with Llama drawing placeholder

--- a/src/juego.html
+++ b/src/juego.html
@@ -28,7 +28,7 @@
                     <div class="horizontalStackWrapper">
                         <header class="llama-intro">
                             <div class="portrait-wrapper">
-                                <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -80,7 +80,7 @@
                     <div class="horizontalStackWrapper">
                         <header class="llama-intro">
                             <div class="portrait-wrapper">
-                                <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -135,7 +135,7 @@
                 <div class="slideContainer" id="slide3">
                     <aside class="llama-instructions">
                         <div class="portrait-wrapper">
-                            <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                            <img src="brand/llama-head.svg" alt="Pacha-Llama">
                         </div>
 
                         <div class="text-wrapper">
@@ -153,7 +153,7 @@
                 <div class="slideContainer" id="slide4">
                     <aside class="llama-instructions">
                         <div class="portrait-wrapper">
-                            <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                            <img src="brand/llama-head.svg" alt="Pacha-Llama">
                         </div>
 
                         <div class="text-wrapper">
@@ -173,7 +173,7 @@
                     <div class="horizontalStackWrapper">
                         <header class="llama-intro">
                             <div class="portrait-wrapper">
-                                <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -244,7 +244,7 @@
                     <div class="llama-waiting-container">
                         <main class="llama-wait">
                             <div class="portrait-wrapper">
-                                <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -259,7 +259,7 @@
                     <div class="leftToRightWrapper">
                         <aside class="llama-instructions">
                             <div class="portrait-wrapper">
-                                <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -301,7 +301,7 @@
 
             <aside id="llama-helper">
                 <div class="left-wrapper">
-                    <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                    <img src="brand/llama-head.svg" alt="Pacha-Llama">
                 </div>
     
                 <div class="right-wrapper">
@@ -317,7 +317,7 @@
             <!-- HELPER for debugging steps -->
             <!-- <aside id="llama-helper">
                 <div class="left-wrapper">
-                    <img src="https://avatar.iran.liara.run/public/girl" alt="Pacha-Llama">
+                    <img src="brand/llama-head.svg" alt="Pacha-Llama">
                 </div>
     
                 <div class="right-wrapper">
