Fetches info from Llama and displays it

--- a/src/juego.html
+++ b/src/juego.html
@@ -239,17 +239,16 @@
                     </div>
                 </div>
 
-
                 <div class="slideContainer" id="slide6">
                     <div class="llama-waiting-container">
                         <main class="llama-wait">
+                            <div class="text-wrapper">
+                                <h3 id="loading-title">Pacha-Llama está en un trance místico para encontrar el incidente perfecto para tu juego.</h3>
+                                <img src="brand/logo-loading.gif" alt="Ansiudad-Logo-Loading-Animation" id="loading-animation">
+                                <p>Espera un momento...</p>
+                            </div>
                             <div class="portrait-wrapper">
                                 <img src="brand/llama-head.svg" alt="Pacha-Llama">
-                            </div>
-
-                            <div class="text-wrapper">
-                                <h3>Pacha-Llama está en un trance místico para encontrar el incidente perfecto para tu juego.</h3>
-                                <p>Espera un momento...</p>
                             </div>
                         </main>
                     </div>
@@ -275,17 +274,16 @@
                             </div>
                         </aside>
 
-                        <div class="cards-container fullHeight">
-                            <div class="card-wrapper fullHeight">
+                        <div class="cards-container fitHeight">
+                            <div class="card-wrapper fitHeight">
                                 <h4>1. Incidente</h4>
-                                <div id="llama-event" class="llama-response">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellendus nisi, dolore earum exercitationem a, nemo vero, maxime veniam libero at beatae vel est perspiciatis nihil laboriosam incidunt sequi adipisci?</div>
-
+                                <div id="llama-event" class="llama-response"></div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                             
-                            <div class="card-wrapper fullHeight">
+                            <div class="card-wrapper fitHeight">
                                 <h4>2. Roles</h4>
                                 <div id="llama-roles" class="llama-response">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellendus nisi, dolore earum exercitationem a, nemo vero, maxime veniam libero at beatae vel est perspiciatis nihil laboriosam incidunt sequi adipisci?</div>
 
