--- a/static/juego.html
+++ b/static/juego.html
@@ -10,10 +10,10 @@
 <body>
     <header class="headerNav">
         <a href="/">¿Qué es Ansiudad?</a>
-        <a href="./about.html">¿Cómo lo diseñanos?</a>
-        <a href="./about.html">¿Dónde se ha jugado?</a>
-        <a href="./about.html">¿De qué se trata?</a>
-        <a href="./juego.html">👉 ¿Quieres jugar?</a>
+        <a href="/about.html">¿Cómo lo diseñanos?</a>
+        <a href="/about.html">¿Dónde se ha jugado?</a>
+        <a href="/about.html">¿De qué se trata?</a>
+        <a href="/juego.html">👉 ¿Quieres jugar?</a>
     </header>
 
     <main data-taxi>
