comment out 3rd card for Llama prompt

--- a/src/juego.html
+++ b/src/juego.html
@@ -219,7 +219,7 @@
                                 </div>
                             </div>
 
-                            <div class="card-wrapper">
+                            <!-- <div class="card-wrapper">
                                 <h4>3. Roles</h4>
                                 <p>Asignaré a cada jugador un rol con intereses únicos que deberá considerar y proteger en relación con los demás integrantes.</p>
                                 <p>Ayúdame a colocar los nombres de tus jugadores. Separados por una coma:</p>
@@ -232,7 +232,7 @@
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                         <button class="regular-btn goToNextStepBtn" id="submit">Listo, crea el incidente para jugar!</button>
