adds loader class, load animation, and logic for its removal once the resources are loaded

--- a/src/juego.html
+++ b/src/juego.html
@@ -15,8 +15,10 @@
         <a href="/about.html">¿De qué se trata?</a>
         <a href="/juego.html">👉 ¿Quieres jugar?</a>
     </header>
-
     <main data-taxi>
+        <div id="loader-container">
+            <div id="loader"></div>
+        </div>
         <article data-taxi-view id="juegoContainer" class="pageContainer">
             <div class="allSlidesContainer">
                 <div class="slideContainer" id="slide0">
@@ -176,7 +178,7 @@
                                 <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
 
-                            <div class="text-wrapper">
+                            <div class="text-wrapper" id="form-dialogue">
                                 <h3>¡Genial!</h3>
 
                                 <p>Ahora necesito que me ayudes a entender algunas cosas antes de empezar a jugar:</p>
